--- a/src/main/resources/templates/chat/room.html
+++ b/src/main/resources/templates/chat/room.html
@@ -9,7 +9,7 @@
         <ul class="chat__message-ul"></ul>
     </div>
 
-    <button onclick="Chat__loadMore();">로드</button>
+    <!--    <button onclick="Chat__loadMore();">로드</button>-->
 </div>
 
 <script>
@@ -74,9 +74,9 @@
     let Chat__lastLoadedId = 0;
 
 
-    function Chat__loadMore(){
-        fetchGet("/chat/messages",{
-            fromId : Chat__lastLoadedId
+    function Chat__loadMore() {
+        fetchGet("/chat/messages", {
+            fromId: Chat__lastLoadedId
         })
             .then(body => {
                 console.log('body : ' + body);
@@ -90,11 +90,12 @@
 
     const Chat_elMessageUl = document.querySelector('.chat__message-ul');
 
-    function Chat__drawMessages(messages){
-        if(messages.length == 0) return;
+    function Chat__drawMessages(messages) {
+        if (messages.length > 0) {
+            // 가져온 메세지를 그리기 전에 Chat__lastLoadedId 변수의 값을 갱신
+            Chat__lastLoadedId = messages[messages.length - 1].id;
+        }
 
-        // 가져온 메세지를 그리기 전에 Chat__lastLoadedId 변수의 값을 갱신
-        Chat__lastLoadedId = messages[messages.length - 1].id;
         console.log(Chat__lastLoadedId);
 
         messages.forEach((message) => {
@@ -103,6 +104,22 @@
                     "afterbegin",
                     `<li>${message.authorName} : ${message.content}</li>`
                 )
-        })
+        });
+
+        // Chat__loadMore(); // 즉시실행
+        // setTimeout(Chat__loadMore,500); // 0.5초 뒤에 실행 -> 무분별한 호출 야기
     }
+
+    // SSE 연결(통신)
+    // SSE -> 단방향 무전기
+    // 방향 : 서버 -> 클라이언트
+    const sse = new EventSource("/sse/connect");
+
+    // 서버로부터 chat__messageAdded 라는 알림이 오면? Chat__loadMore 함수 실행
+    sse.addEventListener('chat__messageAdded', e => {
+        Chat__loadMore();
+    });
+
+    // 최초에 한번 불러오기
+    Chat__loadMore();
 </script>
